--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,10 +23,12 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 tauri-plugin-autostart = { version = "2" }
+tauri-plugin-log = { version = "2", features = ["colored"] }
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4"
 once_cell = "1.18"
 directories = "5.0"
 user-idle = "0.5.2"
 whoami = "1.4"
+log = "0.4"
 
