--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,4 +61,5 @@ jobs:
             src-tauri/target/release/bundle/appimage/*.AppImage
             src-tauri/target/release/bundle/msi/*.msi
             src-tauri/target/release/bundle/nsis/*.exe
-            src-tauri/target/release/remodance* 
+            src-tauri/target/release/remodance*
+          if-no-files-found: warn
