--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: 'npm'
+          node-version: 22
+          cache: 'pnpm'
+      
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10.6.3
+          run_install: false
       
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -38,7 +44,7 @@ jobs:
       
       - name: Install dependencies
         run: |
-          npm install
+          pnpm install
       
       - name: Run Rust unit tests
         run: |
@@ -46,7 +52,7 @@ jobs:
           cargo test
       
       - name: Build application
-        run: npm run tauri build
+        run: pnpm run tauri build
         env:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
