--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         platform: [windows-latest, macos-latest, ubuntu-latest]
         include:
           - platform: ubuntu-latest
-            ADDITIONAL_APT: libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+            ADDITIONAL_APT: libgtk-3-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf webkit2gtk3-devel
 
     runs-on: ${{ matrix.platform }}
     steps:
