--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 tauri-plugin-autostart = { version = "2" }
 tauri-plugin-log = { version = "2", features = ["colored"] }
+tauri-plugin-store = { version = "2" }
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4"
 once_cell = "1.18"
