--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,42 +10,84 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest, ubuntu-latest]
+        platform: [windows-latest, macos-latest, ubuntu-latest, fedora-latest]
         include:
           - platform: ubuntu-latest
-            ADDITIONAL_APT: libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+            ADDITIONAL_APT: >-
+              libgtk-3-dev
+              libwebkit2gtk-4.1-dev
+              libappindicator3-dev
+              librsvg2-dev
+              patchelf
+              libx11-dev
+              libxss-dev
+              libxext-dev
+              libxcb1-dev
+              libxrandr-dev
+              libxinerama-dev
+              libxcursor-dev
+              libxi-dev
+              pkg-config
+          - platform: fedora-latest
+            ADDITIONAL_DNF: >-
+              gtk3-devel
+              webkit2gtk4.1-devel
+              libappindicator-gtk3-devel
+              librsvg2-devel
+              patchelf
+              libX11-devel
+              libXScrnSaver-devel
+              libXext-devel
+              libxcb-devel
+              libXrandr-devel
+              libXinerama-devel
+              libXcursor-devel
+              libXi-devel
+              pkgconf-pkg-config
 
     runs-on: ${{ matrix.platform }}
+
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
-          node-version: 18
-          cache: 'npm'
-      
+          version: 10.6.3
+          run_install: false
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'pnpm'
+
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
-      
+
       - name: Install Ubuntu dependencies
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y ${{ matrix.ADDITIONAL_APT }}
-      
-      - name: Install dependencies
+
+      - name: Install Fedora dependencies
+        if: matrix.platform == 'fedora-latest'
         run: |
-          npm install
-      
+          sudo dnf check-update || true
+          sudo dnf install -y ${{ matrix.ADDITIONAL_DNF }}
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
       - name: Build application
-        run: npm run tauri build
+        run: pnpm run tauri build
         env:
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-      
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: remodance-${{ matrix.platform }}
           path: |
@@ -54,7 +96,11 @@ jobs:
             src-tauri/target/release/bundle/appimage/*.AppImage
             src-tauri/target/release/bundle/msi/*.msi
             src-tauri/target/release/bundle/nsis/*.exe
-      
+            src-tauri/target/release/bundle/rpm/*.rpm
+            src-tauri/target/release/bundle/latest.json
+            src-tauri/target/release/remodance*
+          if-no-files-found: warn
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -65,5 +111,8 @@ jobs:
             src-tauri/target/release/bundle/appimage/*.AppImage
             src-tauri/target/release/bundle/msi/*.msi
             src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/rpm/*.rpm
+            src-tauri/target/release/bundle/latest.json
+            src-tauri/target/release/remodance*
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
