--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest, ubuntu-latest]
+        platform: [windows-latest, macos-latest, ubuntu-latest, fedora-latest]
         include:
           - platform: ubuntu-latest
             ADDITIONAL_APT: >-
@@ -31,45 +31,68 @@ jobs:
               libxi-dev
               pkg-config
 
+          - platform: fedora-latest
+            ADDITIONAL_DNF: >-
+              gtk3-devel
+              webkit2gtk4.1-devel
+              libappindicator-gtk3-devel
+              librsvg2-devel
+              patchelf
+              libX11-devel
+              libXScrnSaver-devel
+              libXext-devel
+              libxcb-devel
+              libXrandr-devel
+              libXinerama-devel
+              libXcursor-devel
+              libXi-devel
+              pkgconf-pkg-config
+
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10.6.3
           run_install: false
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
-      
+
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
-      
+
       - name: Install Ubuntu dependencies
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y ${{ matrix.ADDITIONAL_APT }}
-      
+
+      - name: Install Fedora dependencies
+        if: matrix.platform == 'fedora-latest'
+        run: |
+          sudo dnf check-update || true
+          sudo dnf install -y ${{ matrix.ADDITIONAL_DNF }}
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
+
       - name: Run Rust unit tests
         run: |
           cd src-tauri
           cargo test
-      
+
       - name: Build application
         run: pnpm run tauri build --debug
         env:
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-      
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -80,5 +103,7 @@ jobs:
             src-tauri/target/release/bundle/appimage/*.AppImage
             src-tauri/target/release/bundle/msi/*.msi
             src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/rpm/*.rpm
+            src-tauri/target/release/bundle/latest.json
             src-tauri/target/release/remodance*
           if-no-files-found: warn
