chore: Update semantic-release GitHub plugin configuration
- Modified the GitHub plugin settings in the semantic-release configuration to include asset uploads and disable success/fail comments.
- Added GH_TOKEN to the environment variables in the GitHub Actions workflow for improved token management during releases.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,6 +114,7 @@ jobs:
 
       - name: Semantic Release
         env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           pnpm exec semantic-release
