--- a/.github/workflows/test-token.yml
+++ b/.github/workflows/test-token.yml
@@ -8,9 +8,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout without default token
         uses: actions/checkout@v4
         with:
+          token: ${{ secrets.GH_TOKEN }}
+          persist-credentials: false
           fetch-depth: 0
 
       - name: Try pushing a tag with GH_TOKEN
@@ -19,9 +21,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-
-          echo "Using token: ${GH_TOKEN:0:4}... (redacted for logs)"
-
           git remote set-url origin "https://x-access-token:${GH_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
           git tag test-pat-$(date +%s)
           git push origin --tags
