--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,6 +87,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -100,8 +101,13 @@ jobs:
         with:
           path: artifacts
 
-      - name: Display structure of downloaded files
-        run: ls -R artifacts
+      - name: Flatten artifacts into release-assets
+        run: |
+          mkdir release-assets
+          find artifacts -type f -exec mv {} release-assets/ \;
+
+      - name: Display structure of flattened assets
+        run: ls -lh release-assets
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -122,13 +128,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          pnpm exec semantic-release
-
-      - name: Upload all build artifacts to GitHub Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: artifacts/**/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: pnpm exec semantic-release
